# clx-preprocessing

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml  stress_queue.py
.claude-plugin/: marketplace.json  plugin.json
.codex-briefs/: 2026-07-02-codex-baseline-rebase.md
.codex-plugin/: plugin.json
.github/profile/: README.md
.github/workflows/: ci.yml  publish.yml
.grok-briefs/: ci-start-daemon-fallback.md  ctx-auto-middleware.md  ctx-llm-compress-forget.md  ctx-pinned-overflow-guard.md  fix-cold-demote-false-failure.md  fix-forget-path-dependency.md  fix-live-audit-0619.md  llm-hallucination-guard.md  p2-guard-hotspin.md  p3-native-less-fallback.md  p4-idle-self-exit.md  p4b-fallback-pidfile.md  perf-0619.md
Docs/: README.md  agent-surfaces.md  architecture.md  design.md  installation.md  rust-architecture.md  tools.md
adapters/claude/.claude-plugin/: plugin.json
adapters/claude/skills/preprocess/: SKILL.md
adapters/codex/: config-snippet.toml
cluxion-Docs/: README.md  architecture.md  harness-logic.md  honesty-preprocessing.md  install-and-operations.md  security.md
commands/: cluxion-doctor.md  cluxion-plan.md  loop-auto.md
dist-merged/: cluxion_agentplugin_preprocessing-0.3.21-cp311-abi3-macosx_11_0_arm64.whl
rust/cluxion_queue/: Cargo.toml  pyproject.toml
rust/cluxion_queue/src/: context.rs  dispatch.rs  guard.rs  lib.rs  main.rs  queue.rs  types.rs
rust/cluxion_queue/tests/: cross_process_enqueue.rs
scripts/: benchmark_preprocess.py  build_local_wheel.sh  repack_native_wheel.py
skills/clx-preprocess/: SKILL.md
skills/preprocess/: SKILL.md
src/cluxion_agentplugin_preprocessing/: __init__.py  cli.py  guard_watch.py  hermes_config.py  hermes_deliver_patch.py  plugin.py  plugin.yaml  runner.py  schemas.py  slash_commands.py
src/cluxion_agentplugin_preprocessing/doctor/: __init__.py  catalog.json  framework.py  probes.py
src/cluxion_agentplugin_preprocessing/patches/: hermes-deliver-agent.patch
src/cluxion_runtime/: __init__.py  __main__.py  bootstrap.py  cli.py  guard_daemon_host.py
src/cluxion_runtime/adapters/: __init__.py  contract.py  grok_build.py  hermes.py  spec.py
src/cluxion_runtime/core/: __init__.py  clarification.py  context_compress.py  dispatch_store.py  harness.py  hybrid_forget.py  intent.py  ledger.py  ledger_codec.py  llm_compress.py  loop_auto.py  plan_codec.py  preprocess.py  types.py  work_queue.py
src/cluxion_runtime/models/: __init__.py  supervisor.py  vllm_mlx.py
src/cluxion_runtime/resources/: __init__.py  guard_bridge.py  py_queue.py  queue_bridge.py  rust_bridge.py
src/cluxion_runtime/web/: __init__.py  browser_bridge.py
tests/: test_bootstrap.py  test_doctor.py  test_guard_watch.py  test_hermes_config.py  test_hermes_deliver_patch.py  test_packaging_policy.py  test_plugin.py  test_runner.py  test_slash_commands.py
tests/runtime/: test_auto_compress_middleware.py  test_bin_resolution.py  test_browser_bridge.py  test_clarification.py  test_clarification_vague.py  test_cli_input_errors.py  test_cluxion_runtime_spine.py  test_context_compress.py  test_context_compress_llm_forget.py  test_contract.py  test_dispatch_store.py  test_estimate_tokens.py  test_grok_build.py  test_guard.py  test_guard_daemon_hardening.py  test_guard_daemon_host.py  test_ledger.py  test_loop_auto.py  test_py_queue_concurrency.py  test_queue_backends.py  test_runtime_adapter_cli.py  test_rust_queue.py  test_supervisor.py
